// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Draft Component renders correctly when draft mode is disabled 1`] = `
<DocumentFragment>
  <div
    class="my-6 border-4 border-accent bg-primary text-primary-content rounded w-full p-4 flex gap-4"
    id="control-panel"
  >
    <p
      class="font-bold"
    >
      Control Panel
    </p>
    <p
      class="text-secondary-content"
    >
      Draft Mode is 
      <strong>
        Disabled.
      </strong>
       
      <a
        class="text-primary-content underline"
        href="/api/enable-draft-mode"
      >
        Enable Draft Mode
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`Draft Component renders correctly when draft mode is enabled 1`] = `
<DocumentFragment>
  <div
    class="my-6 border-4 border-accent bg-primary text-primary-content rounded w-full p-4 flex gap-4"
    id="control-panel"
  >
    <p
      class="font-bold"
    >
      Control Panel
    </p>
    <p
      class="text-primary-content"
    >
      Draft Mode is 
      <strong>
        Enabled.
      </strong>
       
      <a
        class="text-primary-content underline"
        href="/api/disable-draft-mode"
      >
        Disable Draft Mode
      </a>
    </p>
  </div>
</DocumentFragment>
`;
